<resources>
    <string name="app_name">ShoppingCartFinal</string>
    <string name="login">Login</string>
    <string name="web_client_id">17517497229-t44ahlp2dl32e3u3qhmutqs12cuf6m67.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toShoppingCart">toShoppingCart</string>
    <string name="dashboard">Dashboard</string>
    <string name="inventory">Inventory</string>
    <string name="shopping_cart_viewer">Shopping Cart Viewer</string>
    <string name="total_revenue">Total Revenue</string>
    <string name="seller_summary">Seller Summary</string>
    <string name="total_shipping_cost">Total Shipping Cost</string>
    <string name="total_profit">Total Profit</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name">Name</string>
    <string name="cost">Cost</string>
    <string name="description">Description</string>
    <string name="confirm">Confirm</string>
    <string name="pin">PIN</string>
    <string name="expiration_mm_yy">Expiration MM/YY</string>
    <string name="card_number">Card Number</string>
    <string name="zip">ZIP</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="region">Region</string>
    <string name="country">Country</string>
    <string name="to_checkout">To Checkout</string>
    <string name="checkout">Checkout</string>
    <string name="existing_card">Existing Card</string>
    <string name="string_existing_card" />
    <string name="button">Button</string>
    <string name="add_card">Add Card</string>
    <string name="add_shipping_details">Add Shipping Details</string>
    <string name="proceed">proceed</string>
    <string name="back">back</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="total_cost">Total Cost</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="buyer_name">Buyer Name</string>
    <string name="product_name">Product Name</string>
    <string name="product_cost">Product Cost</string>
    <string name="view">view</string>
    <string name="product_description">Product Description</string>
    <string name="sold_by">Sold By</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="cancel">Cancel</string>
    <string name="x">X</string>
    <string name="del">Del</string>
</resources>