<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductPageFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="355dp"
            android:layout_height="661dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/thisProductName"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:text="@string/product_name"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/thisProductCost"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:text="@string/product_cost" />

            <TextView
                android:id="@+id/thisProductDesc"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:text="@string/product_description" />

            <TextView
                android:id="@+id/productSellerName"
                android:layout_width="match_parent"
                android:layout_height="164dp"
                android:text="@string/sold_by" />

            <Button
                android:id="@+id/addProductToCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_to_cart" />

            <Button
                android:id="@+id/cancelAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>