<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SellerDashFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="369dp"
            android:layout_height="662dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.492">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dashboard"
                android:textAlignment="center"
                android:textSize="24sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sRV"
                android:layout_width="match_parent"
                android:layout_height="334dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seller_summary" />

            <TextView
                android:id="@+id/totalRevenue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_revenue" />

            <TextView
                android:id="@+id/totalShippingCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_shipping_cost" />

            <TextView
                android:id="@+id/totalProfit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_profit" />

            <Button
                android:id="@+id/toInventory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/inventory" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>