<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckoutFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="375dp"
            android:layout_height="690dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkout"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/existingCard"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/string_existing_card" />

            <Button
                android:id="@+id/addCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_card" />

            <TextView
                android:id="@+id/existingSD"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/string_existing_card" />

            <Button
                android:id="@+id/addSD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_shipping_details" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>